[build-system]
requires = ["setuptools>=68", "wheel", "Cython>=3.0.0", "numpy>=2.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdqhash"
version = "0.2.9"
description = "Python bindings for Facebook's PDQ hash"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Fausto Morales", email = "faustomorales@gmail.com" }, { name = "Benedict Wolff", email = "benedictwolff@gmail.com" }]
requires-python = ">=3.8"
dependencies = ["numpy>=2.0.0", "Cython>=3.0.0"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: C++",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
]

[tool.setuptools]
packages = ["pdqhash"]

[tool.setuptools.package-data]
"pdqhash" = ["*.pyx", "*.pxd"]